More font size issues on small androids

--- a/tapjoyads/app/assets/stylesheets/api/style.scss
+++ b/tapjoyads/app/assets/stylesheets/api/style.scss
@@ -563,12 +563,6 @@ span.small {
       height: 63.5px;
 
       .offer {
-        .reward {
-          span.big {
-            font-size: 140px;
-          }
-        }
-
         .icon {
           margin-top: 0;
           top: 0px;
@@ -585,6 +579,17 @@ span.small {
           .action {
             line-height: 110%;
           }
+        }
+      }
+
+      .reward {
+        span.big {
+          font-size: 140%;
+          line-height: 105%;
+          margin-top: 0;
+        }
+        span.earn, span.points {
+          font-size: 70%;
         }
       }
     }
